# FreTransformer

./: .gitignore  main.py  pyproject.toml  torchview_script.py
fretransformer/data/: fetch_candles_yhf.py
fretransformer/layers/: FSelfAttention_Family.py  FTrans.py
fretransformer/model/: Fourier_Transformer.py
fretransformer/utils/: utils.py
tests/: test_attention.py  test_data_loader.py  test_embedding.py  test_encoder_decoder.py  test_fft_model.py  test_integration.py
