[project]
name = "fretransformer"
version = "0.1.0"
description = "A Fourier Transformer implementation."
authors = ["AmsonntagChow"]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["fretransformer"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
